--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ h1 {
     font-size:12px;
     text-align:left;
     background:white;
+    border:1px #b8bdc0 solid;
+    padding:30px;
 }
 
 .assignment{
@@ -24,8 +26,16 @@ h1 {
 }
 
 .assignment:hover{
-    background:#bbd1e8;
     cursor:pointer;
+    background:#bbd1e8;
+}
+
+label{
+    margin-top:5px;
+}
+
+input{
+    margin-top:5px;
 }
 
 #namesection{
@@ -36,4 +46,26 @@ h1 {
     padding-bottom:5px;
     letter-spacing:3px;
     margin-top:10px;
+}
+
+#home{
+    float:left;
+    height:30px;
+    width:30px;
+    margin-top:33%;
+    margin-left:30px;
+    border-radius:30px;
+    border:1px #b8bdc0 solid;
+    padding: 8px;
+    background:white;
+    font-family:Arial;
+    letter-spacing:-2px;
+    color:#b8bdc0;
+    text-align:center;
+    font-size:15px;
+}
+
+#home:hover{
+    cursor:pointer;
+    background:rgb(223, 224, 224);
 }
